...
  exportString?: string;
};

export type DetailViewStackParamList = {
  DrawerRoot: undefined;
  UnlockWithScreen: undefined;
  WalletsList: { onBarScanned?: string };
  WalletTransactions: { isLoading?: boolean; walletID: string; walletType: string; onBarScanned?: string };
  WalletDetails: { walletID: string };
  BitAssetsWallet: { walletID: string };
  BitAssetsTools: { walletID: string };
  LiquidWallet: { walletID: string };
  LiquidTools: { walletID: string };
...
  LnurlPaySuccess: {
    paymentHash: string;
    justPaid: boolean;
    fromWalletID: string;
  };
  LnurlAuth: undefined;
  Success: undefined;
  WalletAddresses: { walletID: string };
  AddWalletRoot: undefined;
  SendDetailsRoot: SendDetailsParams;
  LNDCreateInvoiceRoot: undefined;
  ScanLNDInvoiceRoot: {
    screen: string;
...
