...
        onScroll={handleScroll}
        windowSize={15}
        scrollEventThrottle={16}
        ListHeaderComponent={ListHeaderComponent}
        ListEmptyComponent={
          <ScrollView style={[styles.emptyTxsContainer, stylesHook.backgroundContainer]} contentContainerStyle={styles.scrollViewContent}>
            <Text numberOfLines={0} style={styles.emptyTxs} testID="TransactionsListEmpty">
              {(isLightning() && loc.wallets.list_empty_txs1_lightning) || loc.wallets.list_empty_txs1}
            </Text>
            {isLightning() && <Text style={styles.emptyTxsLightning}>{loc.wallets.list_empty_txs2_lightning}</Text>}
          </ScrollView>
        }
        refreshControl={
...
        }
      />

      <FContainer ref={walletActionButtonsRef}>
        {wallet.allowReceive() && (
          <FButton
            testID="ReceiveButton"
            text={loc.receive.header}
            onPress={() => {
              if (wallet.type === BitAssetsWallet.type) {
                navigate('BitAssetsWallet', { walletID });
              } else if (wallet.type === LiquidWallet.type) {
                navigate('LiquidWallet', { walletID });
...
